# MISA

./: .gitignore  README.md  pyproject.toml
c4_pretraining/: run_llama_pretraining.py
misa/: args.py  callbacks.py  clip_grad_norm.py  custom_trainer.py  evaluate.py  train.py
misa/optimizer/: __init__.py  block_coordinate_optimizer.py
scripts/: alpaca_badam.sh  alpaca_lisa.sh  alpaca_misa.sh  c4_Galore.sh  c4_adam.sh  c4_misa.sh  evaluate_commonsense.sh  evaluate_math.sh  train_math_misa.sh
